// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product OpenShift Container config should apply an inventory configuration: filtered 1`] = `
{
  "cells": [
    {
      "title": "lorem ipsum",
    },
    {
      "title": 200,
    },
    {
      "title": <DateFormat
        date="2022-01-01T00:00:00.000Z"
      />,
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header_display_name, {"context":"OpenShift Container Platform"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header_Sockets, {"context":"OpenShift Container Platform"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_last_seen, {"context":"OpenShift Container Platform"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "Cores": {
      "title": "t(curiosity-inventory.header_Cores, {"context":"OpenShift Container Platform"})",
      "value": 100,
    },
    "Sockets": {
      "title": "t(curiosity-inventory.header_Sockets, {"context":"OpenShift Container Platform"})",
      "value": 200,
    },
    "display_name": {
      "title": "t(curiosity-inventory.header_display_name, {"context":"OpenShift Container Platform"})",
      "value": "lorem ipsum",
    },
    "last_seen": {
      "title": "t(curiosity-inventory.header_last_seen, {"context":"OpenShift Container Platform"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
  },
}
`;

exports[`Product OpenShift Container config should apply an inventory configuration: filtered, NOT authorized 1`] = `
{
  "cells": [
    {
      "title": <React.Fragment>
        lorem ipsum
         
        
      </React.Fragment>,
    },
    {
      "title": 200,
    },
    {
      "title": <DateFormat
        date="2022-01-01T00:00:00.000Z"
      />,
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header_display_name, {"context":"OpenShift Container Platform"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header_Sockets, {"context":"OpenShift Container Platform"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_last_seen, {"context":"OpenShift Container Platform"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "Cores": {
      "title": "t(curiosity-inventory.header_Cores, {"context":"OpenShift Container Platform"})",
      "value": 100,
    },
    "Sockets": {
      "title": "t(curiosity-inventory.header_Sockets, {"context":"OpenShift Container Platform"})",
      "value": 200,
    },
    "display_name": {
      "title": "t(curiosity-inventory.header_display_name, {"context":"OpenShift Container Platform"})",
      "value": "lorem ipsum",
    },
    "instance_id": {
      "title": "t(curiosity-inventory.header_instance_id, {"context":"OpenShift Container Platform"})",
      "value": "XXXX-XXXX-XXXXX-XXXXX",
    },
    "last_seen": {
      "title": "t(curiosity-inventory.header_last_seen, {"context":"OpenShift Container Platform"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
  },
}
`;

exports[`Product OpenShift Container config should apply an inventory configuration: filtered, authorized 1`] = `
{
  "cells": [
    {
      "title": <React.Fragment>
        <Button
          component="a"
          href="/insights/inventory/XXXX-XXXX-XXXXX-XXXXX/"
          isInline={true}
          variant="link"
        >
          lorem ipsum
        </Button>
         
        
      </React.Fragment>,
    },
    {
      "title": 200,
    },
    {
      "title": <DateFormat
        date="2022-01-01T00:00:00.000Z"
      />,
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header_display_name, {"context":"OpenShift Container Platform"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header_Sockets, {"context":"OpenShift Container Platform"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_last_seen, {"context":"OpenShift Container Platform"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "Cores": {
      "title": "t(curiosity-inventory.header_Cores, {"context":"OpenShift Container Platform"})",
      "value": 100,
    },
    "Sockets": {
      "title": "t(curiosity-inventory.header_Sockets, {"context":"OpenShift Container Platform"})",
      "value": 200,
    },
    "display_name": {
      "title": "t(curiosity-inventory.header_display_name, {"context":"OpenShift Container Platform"})",
      "value": "lorem ipsum",
    },
    "instance_id": {
      "title": "t(curiosity-inventory.header_instance_id, {"context":"OpenShift Container Platform"})",
      "value": "XXXX-XXXX-XXXXX-XXXXX",
    },
    "last_seen": {
      "title": "t(curiosity-inventory.header_last_seen, {"context":"OpenShift Container Platform"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
  },
}
`;

exports[`Product OpenShift Container config should apply an inventory configuration: filtered, fallback display 1`] = `
{
  "cells": [
    {
      "title": "lorem ipsum",
    },
    {
      "title": 200,
    },
    {
      "title": "",
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header_display_name, {"context":"OpenShift Container Platform"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header_Sockets, {"context":"OpenShift Container Platform"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_last_seen, {"context":"OpenShift Container Platform"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "Cores": {
      "title": "t(curiosity-inventory.header_Cores, {"context":"OpenShift Container Platform"})",
      "value": 100,
    },
    "Sockets": {
      "title": "t(curiosity-inventory.header_Sockets, {"context":"OpenShift Container Platform"})",
      "value": 200,
    },
    "display_name": {
      "title": "t(curiosity-inventory.header_display_name, {"context":"OpenShift Container Platform"})",
      "value": "lorem ipsum",
    },
    "instance_id": {
      "title": "t(curiosity-inventory.header_instance_id, {"context":"OpenShift Container Platform"})",
      "value": null,
    },
    "last_seen": {
      "title": "t(curiosity-inventory.header_last_seen, {"context":"OpenShift Container Platform"})",
      "value": null,
    },
    "number_of_guests": {
      "title": "t(curiosity-inventory.header_number_of_guests, {"context":"OpenShift Container Platform"})",
      "value": null,
    },
  },
}
`;

exports[`Product OpenShift Container config should apply graph configuration: filters 1`] = `
{
  "filtersSettings": [
    {
      "settings": {
        "actions": [
          {
            "id": "uom",
            "position": "right",
          },
          {
            "id": "granularity",
            "position": "right",
          },
        ],
        "color": "#06c",
        "fill": "#8bc1f7",
        "groupMetric": [
          "Cores",
          "Sockets",
        ],
        "isCardTitleDescription": true,
        "isMetricDisplay": false,
        "isMultiMetric": true,
        "isOptional": true,
        "isStandalone": undefined,
        "metric": undefined,
        "metrics": [
          {
            "chartType": "area",
            "color": "#06c",
            "fill": "#8bc1f7",
            "id": "Cores",
            "isCapacity": false,
            "isOptional": true,
            "isStacked": true,
            "isThreshold": false,
            "isToolbarFilter": false,
            "metric": "Cores",
            "stroke": "#06c",
            "strokeWidth": 2,
          },
          {
            "chartType": "area",
            "color": "#06c",
            "fill": "#8bc1f7",
            "id": "Sockets",
            "isCapacity": false,
            "isOptional": true,
            "isStacked": true,
            "isThreshold": false,
            "isToolbarFilter": false,
            "metric": "Sockets",
            "stroke": "#06c",
            "strokeWidth": 2,
          },
          {
            "chartType": "threshold",
            "id": "threshold_Sockets",
            "isCapacity": true,
            "isOptional": true,
            "isStacked": false,
            "isThreshold": true,
            "isToolbarFilter": false,
            "metric": "Sockets",
            "stroke": "#4cb140",
            "strokeDasharray": "4,3",
            "strokeWidth": 3,
          },
          {
            "chartType": "threshold",
            "id": "threshold_Cores",
            "isCapacity": true,
            "isOptional": true,
            "isStacked": false,
            "isThreshold": true,
            "isToolbarFilter": false,
            "metric": "Cores",
            "stroke": "#4cb140",
            "strokeDasharray": "4,3",
            "strokeWidth": 3,
          },
        ],
        "stringId": "Cores",
        "stroke": "#06c",
      },
    },
  ],
}
`;

exports[`Product OpenShift Container config should apply graph configuration: settings 1`] = `
{
  "actions": [
    {
      "id": "uom",
      "position": "right",
    },
    {
      "id": "granularity",
      "position": "right",
    },
  ],
  "isCardTitleDescription": true,
}
`;

exports[`Product OpenShift Container config should apply guest inventory configuration: filtered 1`] = `
{
  "cells": [
    {
      "title": "lorem",
    },
    {
      "title": "lorem inventory id",
    },
    {
      "title": <DateFormat
        date="2022-01-01T00:00:00.000Z"
      />,
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header, {"context":"guestsDisplayName"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"inventoryId"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"lastSeen"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "displayName": {
      "title": "t(curiosity-inventory.header, {"context":"displayName"})",
      "value": "lorem",
    },
    "inventoryId": {
      "title": "t(curiosity-inventory.header, {"context":"inventoryId"})",
      "value": "lorem inventory id",
    },
    "lastSeen": {
      "title": "t(curiosity-inventory.header, {"context":"lastSeen"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
    "loremIpsum": {
      "title": "t(curiosity-inventory.header, {"context":"loremIpsum"})",
      "value": "hello world",
    },
    "subscriptionManagerId": {
      "title": "t(curiosity-inventory.header, {"context":"subscriptionManagerId"})",
      "value": "lorem subscription id",
    },
  },
}
`;

exports[`Product OpenShift Container config should apply guest inventory configuration: filtered, NOT authorized 1`] = `
{
  "cells": [
    {
      "title": "lorem",
    },
    {
      "title": "lorem inventory id",
    },
    {
      "title": <DateFormat
        date="2022-01-01T00:00:00.000Z"
      />,
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header, {"context":"guestsDisplayName"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"inventoryId"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"lastSeen"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "displayName": {
      "title": "t(curiosity-inventory.header, {"context":"displayName"})",
      "value": "lorem",
    },
    "inventoryId": {
      "title": "t(curiosity-inventory.header, {"context":"inventoryId"})",
      "value": "lorem inventory id",
    },
    "lastSeen": {
      "title": "t(curiosity-inventory.header, {"context":"lastSeen"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
    "loremIpsum": {
      "title": "t(curiosity-inventory.header, {"context":"loremIpsum"})",
      "value": "hello world",
    },
    "subscriptionManagerId": {
      "title": "t(curiosity-inventory.header, {"context":"subscriptionManagerId"})",
      "value": "lorem subscription id",
    },
  },
}
`;

exports[`Product OpenShift Container config should apply guest inventory configuration: filtered, authorized 1`] = `
{
  "cells": [
    {
      "title": <Button
        component="a"
        href="/insights/inventory/lorem inventory id/"
        isInline={true}
        variant="link"
      >
        lorem
      </Button>,
    },
    {
      "title": "lorem inventory id",
    },
    {
      "title": <DateFormat
        date="2022-01-01T00:00:00.000Z"
      />,
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header, {"context":"guestsDisplayName"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"inventoryId"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"lastSeen"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "displayName": {
      "title": "t(curiosity-inventory.header, {"context":"displayName"})",
      "value": "lorem",
    },
    "inventoryId": {
      "title": "t(curiosity-inventory.header, {"context":"inventoryId"})",
      "value": "lorem inventory id",
    },
    "lastSeen": {
      "title": "t(curiosity-inventory.header, {"context":"lastSeen"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
    "loremIpsum": {
      "title": "t(curiosity-inventory.header, {"context":"loremIpsum"})",
      "value": "hello world",
    },
    "subscriptionManagerId": {
      "title": "t(curiosity-inventory.header, {"context":"subscriptionManagerId"})",
      "value": "lorem subscription id",
    },
  },
}
`;

exports[`Product OpenShift Container config should apply guest inventory configuration: filtered, missing inventory id 1`] = `
{
  "cells": [
    {
      "title": "lorem",
    },
    {
      "title": "",
    },
    {
      "title": <DateFormat
        date="2022-01-01T00:00:00.000Z"
      />,
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header, {"context":"guestsDisplayName"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"inventoryId"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"lastSeen"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "displayName": {
      "title": "t(curiosity-inventory.header, {"context":"displayName"})",
      "value": "lorem",
    },
    "inventoryId": {
      "title": "t(curiosity-inventory.header, {"context":"inventoryId"})",
      "value": "",
    },
    "lastSeen": {
      "title": "t(curiosity-inventory.header, {"context":"lastSeen"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
    "loremIpsum": {
      "title": "t(curiosity-inventory.header, {"context":"loremIpsum"})",
      "value": "hello world",
    },
    "subscriptionManagerId": {
      "title": "t(curiosity-inventory.header, {"context":"subscriptionManagerId"})",
      "value": "lorem subscription id",
    },
  },
}
`;

exports[`Product OpenShift Container config should apply subscriptions inventory configuration: filtered 1`] = `
{
  "cells": [
    {
      "title": "lorem",
    },
    {
      "title": "hello world",
    },
    {
      "title": "",
    },
    {
      "title": <Tooltip
        content="t(curiosity-inventory.label_has_infinite_quantity, {})"
        distance={5}
        enableFlip={false}
        entryDelay={100}
        exitDelay={0}
        isNoWrap={false}
        position="top"
      >
        <ChartIcon
          aria-label="t(curiosity-inventory.label_has_infinite_quantity, {})"
          fill={null}
          size="sm"
          symbol="infinity"
          title={null}
        />
      </Tooltip>,
    },
    {
      "title": "2022-01-01",
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header_product_name, {"context":"OpenShift Container Platform"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header_service_level, {"context":"OpenShift Container Platform"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_quantity, {"context":"OpenShift Container Platform"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"subscriptions"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_next_event_date, {"context":"OpenShift Container Platform"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "has_infinite_quantity": {
      "title": "t(curiosity-inventory.header_has_infinite_quantity, {"context":"OpenShift Container Platform"})",
      "value": true,
    },
    "next_event_date": {
      "title": "t(curiosity-inventory.header_next_event_date, {"context":"OpenShift Container Platform"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
    "product_name": {
      "title": "t(curiosity-inventory.header_product_name, {"context":"OpenShift Container Platform"})",
      "value": "lorem",
    },
    "service_level": {
      "title": "t(curiosity-inventory.header_service_level, {"context":"OpenShift Container Platform"})",
      "value": "hello world",
    },
    "total_capacity": {
      "title": "t(curiosity-inventory.header_total_capacity, {"context":"OpenShift Container Platform"})",
      "value": 2000,
    },
  },
}
`;

exports[`Product OpenShift Container config should apply subscriptions inventory configuration: filtered, fallback display 1`] = `
{
  "cells": [
    {
      "title": "lorem",
    },
    {
      "title": "",
    },
    {
      "title": "",
    },
    {
      "title": <Tooltip
        content="t(curiosity-inventory.label_has_infinite_quantity, {})"
        distance={5}
        enableFlip={false}
        entryDelay={100}
        exitDelay={0}
        isNoWrap={false}
        position="top"
      >
        <ChartIcon
          aria-label="t(curiosity-inventory.label_has_infinite_quantity, {})"
          fill={null}
          size="sm"
          symbol="infinity"
          title={null}
        />
      </Tooltip>,
    },
    {
      "title": "",
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header_product_name, {"context":"OpenShift Container Platform"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header_service_level, {"context":"OpenShift Container Platform"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_quantity, {"context":"OpenShift Container Platform"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"subscriptions"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_next_event_date, {"context":"OpenShift Container Platform"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "has_infinite_quantity": {
      "title": "t(curiosity-inventory.header_has_infinite_quantity, {"context":"OpenShift Container Platform"})",
      "value": true,
    },
    "next_event_date": {
      "title": "t(curiosity-inventory.header_next_event_date, {"context":"OpenShift Container Platform"})",
      "value": null,
    },
    "product_name": {
      "title": "t(curiosity-inventory.header_product_name, {"context":"OpenShift Container Platform"})",
      "value": "lorem",
    },
    "service_level": {
      "title": "t(curiosity-inventory.header_service_level, {"context":"OpenShift Container Platform"})",
      "value": null,
    },
    "total_capacity": {
      "title": "t(curiosity-inventory.header_total_capacity, {"context":"OpenShift Container Platform"})",
      "value": 2000,
    },
  },
}
`;

exports[`Product OpenShift Container config should apply subscriptions inventory configuration: filtered, infinite 1`] = `
{
  "cells": [
    {
      "title": "lorem",
    },
    {
      "title": "hello world",
    },
    {
      "title": "",
    },
    {
      "title": 2000,
    },
    {
      "title": "2022-01-01",
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header_product_name, {"context":"OpenShift Container Platform"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header_service_level, {"context":"OpenShift Container Platform"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_quantity, {"context":"OpenShift Container Platform"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"subscriptions"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_next_event_date, {"context":"OpenShift Container Platform"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "has_infinite_quantity": {
      "title": "t(curiosity-inventory.header_has_infinite_quantity, {"context":"OpenShift Container Platform"})",
      "value": false,
    },
    "next_event_date": {
      "title": "t(curiosity-inventory.header_next_event_date, {"context":"OpenShift Container Platform"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
    "product_name": {
      "title": "t(curiosity-inventory.header_product_name, {"context":"OpenShift Container Platform"})",
      "value": "lorem",
    },
    "service_level": {
      "title": "t(curiosity-inventory.header_service_level, {"context":"OpenShift Container Platform"})",
      "value": "hello world",
    },
    "total_capacity": {
      "title": "t(curiosity-inventory.header_total_capacity, {"context":"OpenShift Container Platform"})",
      "value": 2000,
    },
  },
}
`;

exports[`Product OpenShift Container config should apply toolbar configuration: filters 1`] = `
[
  {
    "id": "sla",
  },
]
`;
